--- a/assets/index-ddx5N0Yr.css
+++ b/assets/index-ddx5N0Yr.css
@@ -3,6 +3,7 @@
     line-height: 1.5;
     font-weight: 400;
     color-scheme: light dark;
+    color: black;
     background-color: #fffcf0;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
