--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
     src: url('https://framerusercontent.com/assets/dNsitlSx7Q3VSHfkIjuXiNUukmU.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url('https://framerusercontent.com/assets/rfBLtzwF2GUVAwBv7sC0qh8GFs.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 * {
